<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Strong Weightlifting</string>
    <string name="title_activity_edit_training">Training Overview</string>
    <string name="title_activity_edit_training_newTraining">New Training Session</string>
    <string name="title_activity_known_exercise_list">Catalog of Exercises</string>
    <string name="title_showRoutines">Routines</string>
    <string name="action_settings">Settings</string>
    <string name="add_set">Add Set</string>
    <string name="title_activity_change_known_exercise">Change Name/ID of Exercise</string>
    <string name="title_activity_EditText">Notes</string>
    <string name="notesHeader">Notes:&#160; </string>
    <string name="KEY_PREFERENCE_FILE">com.strong_weightlifting.strength_tracker_app.PREFERENCE_FILE </string>
    <string name="KEY_ACTIVE_TRAINING">com.strong_weightlifting.strength_tracker_app.KEY_ACTIVE_TRAINING </string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="use_as_routine">as / update Routine</string>
    <string name="edit_note">Edit Notes Only</string>
    <string name="hide_note">Hide Note</string>
    <string name="copy_as_new_training">As New Training</string>
    <string name="notes_hint">Notes</string>
    <string name="name_of_training_hint">Name of Training</string>
    <string name="month_hint">Monat</string>
    <string name="show_routines">show Routines</string>
    <string name="search_name">Search Exercise Name</string>
    <string name="search_id">ID?</string>
    <string name="delete">Delete</string>
    <string name="edit_pr">Edit PR</string>
    <string name="title_edit_1rm_prs">Edit 1RM PRs</string>
    <string name="catalog_of_exercises">Catalog of Exercises</string>
    <string name="search">Search</string>
    <string name="delete_all_data">delete all Data</string>
    <string name="backup_database">Backup Database</string>
    <string name="import_backup_db">Import Backup DB</string>
    <string name="title_activity_settings">Settings</string>
    <string name="star_emoji">&#9733;</string>

<!--    Simple BLE Strings-->
    <string name="devices">Bluetooth LE Devices</string>

    <string name="location_permission_title">Location permission required</string>
    <string name="location_permission_message">This app does not use location information, but scanning for Bluetooth LE devices requires this permission</string>

    <string name="location_denied_title">Location permission denied</string>
    <string name="location_denied_message">As location permission has not been granted, this app cannot scan for Bluetooth LE devices.</string>
    <string name="pairing_request">PAIRING requested\n-> Perform pairing steps. Connect again</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="percentage_title">% of 1RM as Weight Input visible</string>
    <string name="percentage_summaryOff">Input Field of % of 1RM not visible</string>
    <string name="percentage_summaryOn">Input Field of % of 1RM visible</string>
    <string name="add_notes_hint">Notizen hinzufügen</string>
    <string name="ok">OK</string>
    <string name="clear">clear</string>

<!--   Microbit Blue -->
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_profile">Bluetooth Profile</string>
    <string name="menu_services">Bluetooth Services</string>
    <string name="menu_refresh">Refresh Services</string>
    <string name="menu_new_game">New Game</string>

    <string name="screen_title_main">Device List</string>
    <string name="screen_title_menu">Demo List</string>
    <string name="screen_title_accelerometer">Accelerometer</string>
    <string name="screen_title_magnetometer">Magnetometer</string>
    <string name="screen_title_buttons">Buttons</string>
    <string name="screen_title_LEDs">LEDs</string>
    <string name="screen_title_temperature">Temperature</string>
    <string name="screen_title_digital_output">Digital Output</string>
    <string name="screen_title_animal_magic">Animal Magic?</string>
    <string name="screen_title_device_information">Device Information</string>
    <string name="screen_title_controller">Dual D-Pad Controller</string>
    <string name="screen_title_gamepad">Gamepad Controller</string>
    <string name="screen_title_hrm">Heart Rate Histogram</string>
    <string name="screen_title_UART_AVM">UART AVM</string>

    <string name="model_number">Model Number:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="hardware_revision">Hardware Revision:</string>
    <string name="firmware_revision">Firmware Revision:</string>
    <string name="animal_magic">Animal Magic</string>
    <string name="io_digital_output">IO Digital Output</string>
    <string name="temperature">Temperature</string>
    <string name="buttons">Buttons</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="leds">LEDs</string>
    <string name="step_events">Steps</string>
    <string name="temperature_alarm">Temperature Alarm</string>
    <string name="squirrel_counter">Squirrel Counter</string>
    <string name="controller">Dual D-Pad Controller</string>
    <string name="heart_rate_histogram">Heart Rate Histogram</string>
    <string name="AVM">Animal Vegetable Mineral</string>
    <string name="trivia_scoreboard">Trivia Scoreboard</string>

    <string name="accelerometer_period">Accelerometer Period</string>
    <string name="magnetometer_period">Magnetometer Period</string>
    <string name="scrolling_delay">Scrolling Delay</string>
    <string name="display_text">Display Text</string>
    <string name="bluetooth_scanning">Bluetooth Scanning</string>
    <string name="scan_filter_unpaired">Filter unpaired micro:bits from scan results?</string>
    <string name="temperature_lower">Lower Temperature Limit</string>
    <string name="temperature_upper">Upper Temperature Limit</string>
    <string name="bluetooth_services">Bluetooth Services on micro:bit</string>
    <string name="services_key">Key</string>
    <string name="zone1_limit">Zone 1 Upper BPM Limit</string>
    <string name="zone2_limit">Zone 2 Upper BPM Limit</string>
    <string name="zone3_limit">Zone 3 Upper BPM Limit</string>
    <string name="zone4_limit">Zone 4 Upper BPM Limit</string>
    <string name="service_generic_access">Generic Access Service</string>
    <string name="service_generic_attribute">Generic Attribute Service</string>
    <string name="service_device_information">Device Information Service</string>
    <string name="service_accelerometer">Accelerometer Service</string>
    <string name="service_magnetometer">Magnetometer Service</string>
    <string name="service_button">Button Service</string>
    <string name="service_io_pin">IO Pin Service</string>
    <string name="service_led">LED Service</string>
    <string name="service_event">Event Service</string>
    <string name="service_dfu_control">DFU Control Service</string>
    <string name="service_temperature">Temperature Service</string>
    <string name="service_uart">UART Service</string>
    <string name="avm_question_label">Enter your Y/N question</string>
    <string name="avm_question_btn">Send question</string>
    <string name="avm_new_game_btn">New Game</string>
    <string name="avm_answer_label">micro:bit answer</string>

    <string name="gamepad_event_code">Gamepad Event Code</string>
    <string name="gamepad_pad_1">Left Pad Event Values</string>
    <string name="gamepad_pad_2">Right Pad Event Values</string>
    <string name="gamepad_up_on">Up ON</string>
    <string name="gamepad_up_off">Up OFF</string>
    <string name="gamepad_down_on">Down ON</string>
    <string name="gamepad_down_off">Down OFF</string>
    <string name="gamepad_left_on">Left ON</string>
    <string name="gamepad_left_off">Left OFF</string>
    <string name="gamepad_right_on">Right ON</string>
    <string name="gamepad_right_off">Right OFF</string>


</resources>
