<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyActivity">
    <group android:id="@+id/trainingOptionsGroup">
        <item
            android:id="@+id/action_star"
            android:title="@string/use_as_routine"
            app:showAsAction="ifRoom"
            />
        <item
            android:id="@+id/action_copy_training"
            android:title="@string/copy_as_new_training"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_training_addNote"
            android:title="@string/edit_note"
            app:showAsAction="never"
            />

        <item
            android:id="@+id/action_training_delete"
            android:title="@string/delete"
            app:showAsAction="never"
            />

    </group>
</menu>
