<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_test"
        android:title="Test"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_editItems"
        android:title="@string/edit"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_done"
        android:title="@string/done"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_RoutineAsPercentage"
        android:title="use Percentage"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="false"
        />
</menu>